0.9.d
It is allowed to throw an Exception in a catch() block.
Adding ooc_manage_object() method
Improved performance in ooc core (use of managed pointers instead of try...catch)
Modified ooc_cast(), ooc_check_cast();

0.9.c
Adding ooc_isClassOf() type checking.
Bug fix in ooc_finalize().
Simplification of the copy constructor return values.
Adding typed Vector.
Adding typed List.
Addind List of ListNode objects.
Test suites: Vector, Signal
More docs: Vector
Restructured Exception handling, easier use of exceptions
More templates for the ooc tool.
Adding ooc_manage() and ooc_pass() mechanism.


0.9.b
Adding type safe cast, ooc_cast functionality.
Adding ooc_use and ooc_release functionality.
